= svn
* [NEW] Added Zed Shaw's rakehelper lib (from rfuzz, with permission).
* [NEW] Extensions using mkrf can now build properly in RubyGems!
* [NEW] Extension configurations should now be named mkrf_conf.rb to not conflict with the mkmf settings in RubyGems.
* [NEW] Added example extensions.
* [NEW] Add install task to generated Rakefile.
* [CLEAN-UP] Preprocessor define handling moved to Availability from Generator.
* [NEW] find_executable method added to Availability.
* [FIXED] include_header and has_header? now properly set preprocessor defines.
* [FIXED] Defaults on Generator work again. [44]

= 0.1.2 10/4/06
* [CLEAN-UP] Removed useless add_source from Generator. We've got a constructor for that. [35]
* [FIXED] Generator.new defaults to sources in the local directory, so extconfs can (and should) be kept in the same directory as the extension files (PROJ_ROOT/ext) and won't clobber pre-existing Rakefiles. [35]
* [CLEAN-UP] Goodbye ugly method missing hack! [34]
* [NEW] Added objs to Generator. Access it as you might ldshared. -John G.
* [CLEAN-UP] Removed the redundant .so rule from the generated rakefile. -John G.
* [FIXED] Correct defaults in Availability. [29]
* [NEW] Using rubylibdir from rbconfig for library path. [29]
* [NEW] Availability options go straight to availability without generator modification. [29]
* [NEW] CFLAGS and LDSHARED now accessible through .cflags and .ldshared. [29]
* [FIXED] Can now modify Availability options from the Generator contructor. This may break some existing extconfs that use the .new('libname','file_pattern_a', 'file_pattern_b') syntax. File patterns now only belong as arg 2 and should be an array or a string.
* [FIXED] No indenting generated Rakefile code. [26]

= 0.1.1 8/17/06
* [NEW] Logging! [22]
* [NEW] Added a description to the extension building task [21]