@@ -1,5 +1,5 @@
 #include "ruby.h"
 	
 void Init_trivial() {
-  rb_define_class("MyClass", rb_cObject);
+  rb_define_class("Trivial", rb_cObject);
 }
