@@ -63,6 +63,7 @@ module Mkrf
     # Params:
     # * +extension_name+ -- the name of the extension
     # * +source_patterns+ -- an array of patterns describing source files to be compiled. ["*.c"] is the default.
+    
     def initialize(extension_name, source_patterns = ["*.c"], availability_options = {})
       @sources = source_patterns
       @extension_name = extension_name + ".#{CONFIG['DLEXT']}"
@@ -130,11 +131,17 @@ module Mkrf
       @available.logger
     end
     
+    # Logs a fatal error and exits with a non-zero code (defaults to 1)
+    def abort!(str, code = 1)
+      logger.fatal str
+      exit code
+    end
+    
     def write_rakefile(filename = "Rakefile") # :nodoc:
       File.open(filename, "w+") do |f|
         f.puts rakefile_contents
       end
-      @available.logger.info "Rakefile written"
+      logger.info "Rakefile written"
     end
     
     def defines_compile_string # :nodoc:
@@ -143,6 +150,7 @@ module Mkrf
     
     def rakefile_contents # :nodoc:
       <<-END_RAKEFILE
+# Generated by mkrf
 require 'rake/clean'
 
 CLEAN.include('*.o')
